fix dark mode theme density which cause mat form field height to be reduced

--- a/src/themes/m3-theme.scss
+++ b/src/themes/m3-theme.scss
@@ -34,7 +34,7 @@ $dark-theme: mat.define-theme(
       use-system-variables: true
     ),
     density: (
-      scale: -5
+      //scale: -5
     )
   )
 );
